<resources>
    <string name="app_name">简书(仿)</string>
    <string name="app_info">应用信息</string>
    <string name="abort_editing">放弃编辑</string>
    <string name="about_tab_sinaweibo">新浪微博</string>
    <string name="about_tab_website">我们的网站</string>
    <string name="about_tab_wetchat_account">微信公众号</string>
    <string name="account_cannot_null">账号不能为空</string>
    <string name="action_add_subject">收入专题</string>
    <string name="action_cancel_collect">取消收藏</string>
    <string name="action_cancel_praise">取消赞</string>
    <string name="action_cancel_praised">已取消赞</string>
    <string name="action_canceled">已取消</string>
    <string name="action_collect">收藏</string>
    <string name="action_edit">编辑</string>
    <string name="action_praise">赞</string>
    <string name="action_praised">已赞</string>
    <string name="action_share">分享</string>
    <string name="ad">广告或垃圾信息</string>
    <string name="add_article_to_collection">收入专题</string>
    <string name="add_comment">添加评论</string>
    <string name="add_edit_shotcut">添加写文章到桌面</string>
    <string name="add_editor">增加编辑</string>
    <string name="add_label">添加标签</string>
    <string name="add_label_hint">请输入标签名称</string>
    <string name="add_label_tips">添加标签 (最多添加3个标签)</string>
    <string name="add_link">添加链接</string>
    <string name="add_to_blacklist_prompt">确定将该用户加入黑名单吗？在您黑名单中的用户无法在您的文章下面发表评论，无法在其他评论中提到您，也无法给您发送简信。</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="after_change_write_mode">切换后仅对新建文章生效，此前创建的文章将保持原有编辑器模式</string>
    <string name="alipay">支付宝</string>
    <string name="all_follow">全部关注</string>
    <string name="all_managers">全部</string>
    <string name="all_pending_submission">全部未处理请求</string>
    <string name="am">上午</string>
    <string name="article_add_by_collections">入选专题</string>
    <string name="article_comment_title">评论 %1$s</string>
    <string name="article_info" formatted="false">%d次阅 • %d字</string>
    <string name="article_like_failed">操作失败</string>
    <string name="article_list">文章目录</string>
    <string name="article_push">文章更新推送</string>
    <string name="associated_collection">相关专题</string>
    <string name="associated_note">相关文章</string>
    <string name="associated_notebook">相关文集</string>
    <string name="associated_user">相关用户</string>
    <string name="attach_image">带图片</string>
    <string name="attach_long_weibo">带长微博</string>
    <string name="audit_info">审核时间:平均%1$s • 上次%2$s前</string>
    <string name="auth_cancle">授权取消</string>
    <string name="auth_error">AuthFailureError</string>
    <string name="auth_failur">授权失败</string>
    <string name="author_drawed">作者撤回了投稿</string>
    <string name="author_no_comment_tips">作者还没有发表评论哦~</string>
    <string name="bai_tian">白天</string>
    <string name="ban_ben_gen_xin">版本更新</string>
    <string name="bang_ding">绑定</string>
    <string name="bei_ju_jue">被拒绝</string>
    <string name="bian">编</string>
    <string name="bian_ji_lian_jie">编辑连接</string>
    <string name="bind_phone_number">绑定手机号码</string>
    <string name="bind_social_account">绑定社交帐号</string>
    <string name="bind_social_account_tip">出于安全考虑,你最初用来创建帐户的社交帐号不能移除</string>
    <string name="bind_social_error">绑定失败~</string>
    <string name="bind_social_success">绑定成功~</string>
    <string name="blacklist_setting">黑名单设置</string>
    <string name="bookmark_article">收藏的文章</string>
    <string name="both_follow">互相关注</string>
    <string name="browser_history">浏览历史</string>
    <string name="bu_xu_shen_he">不需审核</string>
    <string name="bu_zai_ti_xing">不再提醒</string>
    <string name="cache_tips">仅WI-FI下可用，自动下载最新内容</string>
    <string name="cache_when_disconnect">离线下载</string>
    <string name="cancel_edit_shotcut_msg">已取消，后续你可以在设置页面进行添加</string>
    <string name="cancel_like">取消喜欢</string>
    <string name="cancel_modification">取消修改</string>
    <string name="cancel_reward">取消打赏</string>
    <string name="canceled_pay">您取消了支付</string>
    <string name="cao_zuo_shi_bai">操作失败</string>
    <string name="cha_kan_wen_zhang">查看原文</string>
    <string name="cha_kan_xiang_qing">查看详情</string>
    <string name="chang_gui_she_zi">常规设置</string>
    <string name="change">更换</string>
    <string name="change_avatar_tip">"不喜欢头像？
点击换一个吧"</string>
    <string name="change_default_reward_amount">更改默认打赏金额</string>
    <string name="change_default_reward_desc">更改打赏描述</string>
    <string name="change_other">换一批</string>
    <string name="charge">充值</string>
    <string name="charge_limits_tips">充值金额不能超过1万</string>
    <string name="charge_success">充值成功</string>
    <string name="che_hui">撤回</string>
    <string name="check_sum_error_tips">啊哦！下载似乎出了点小问题，建议你去应用市场更新！</string>
    <string name="choice_report_type">请选择举报类别</string>
    <string name="choose_country_and_area">选择国家和地区</string>
    <string name="clear_search_record">清除搜索记录</string>
    <string name="close">关闭</string>
    <string name="closed_comment_tips">想发表一点看法咩，与Ta简信交流吧~</string>
    <string name="collection_accept_contribution">专题接受投稿</string>
    <string name="collection_count_f">专题 %1$d</string>
    <string name="collection_info">%1$d篇文章 • %2$d人关注</string>
    <string name="collection_info2">%1$s • %2$d篇文章 • %3$d人关注</string>
    <string name="collection_submission_subtitle">专题有新投稿，将出现在这里</string>
    <string name="collection_submit_audit">投稿需审核</string>
    <string name="collection_submit_decline">投稿被拒绝</string>
    <string name="collection_submit_fail">投稿失败</string>
    <string name="collection_submit_forbid">不接受投稿</string>
    <string name="collection_submit_forbid_prompt">此专题不接受投稿</string>
    <string name="collection_submit_no_audit">可直接投稿，不需审核</string>
    <string name="comment_detail">评论详情</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_tips">你的文章被评论或者你在评论中被@到</string>
    <string name="comment_unable">评论关闭</string>
    <string name="common_info">%1$s • %2$d篇文章 • %3$d人关注</string>
    <string name="common_setting">通用设置</string>
    <string name="confirm_charge">确认充值</string>
    <string name="confirm_pay">确认支付</string>
    <string name="confirm_quit">确认退出当前的账号?</string>
    <string name="content_copyed">内容已复制</string>
    <string name="contribution_manage">投稿管理</string>
    <string name="contribution_need_check">投稿需要审核</string>
    <string name="contribution_need_editor_check">投稿需要编辑审核</string>
    <string name="contribution_not_accept">不接受投稿</string>
    <string name="contribution_not_need_check">投稿不需要审核</string>
    <string name="copy">复制</string>
    <string name="copy_to_clipboard">已复制到粘贴板</string>
    <string name="copy_url">复制链接</string>
    <string name="count_99">99+</string>
    <string name="count_article_update">%1$s篇文章</string>
    <string name="count_article_words">%1$s字</string>
    <string name="create">创建</string>
    <string name="create_collection">新建专题</string>
    <string name="create_collection_tip">为您的专题选择一张封面吧</string>
    <string name="create_edit_shortcut_reminder">"如果你遇到创建快捷方式失败，请按以下方式进行操作
1、点击“去设置”，在系统设置里面允许简书创建快捷方式
2、设置完毕后，重新添加
特别说明：部分手机如锤子、OPPO等部分系统，因为系统限制，会不允许创建快捷方式，简书无能为力了"</string>
    <string name="create_edit_shotcut_msg">添加“写文章”快捷方式到桌面，让你更快速记录灵感</string>
    <string name="create_notebook_first">无可选文集，请先创建文集</string>
    <string name="create_shortcut_error_reminder">创建桌面快捷方式失败</string>
    <string name="create_sth">新建</string>
    <string name="create_success">创建成功</string>
    <string name="create_user_shortcut_reminder">"如果你遇到创建快捷方式失败，请按以下方式进行操作
1、点击“去设置”，在系统设置里面允许简书创建快捷方式
2、设置完毕后，在简书设置里面重新手动添加
特别说明：部分手机如锤子、OPPO等部分系统，因为系统限制，会不允许创建快捷方式，简书无能为力了"</string>
    <string name="creator">创建者</string>
    <string name="current_cache">当前缓存</string>
    <string name="current_version">当前版本</string>
    <string name="custom_hot_article">定制热门文章</string>
    <string name="dai_shen_he">待审核</string>
    <string name="daily_tips">每日为您推送优质内容</string>
    <string name="default_editor">默认编辑器</string>
    <string name="default_editor_note_title">无标题文章</string>
    <string name="default_online_save_as_draft">%1$s - 草稿</string>
    <string name="default_reward_desc">如果觉得我的文章对你有帮助，请随意打赏。您的支持将鼓励我继续创作！</string>
    <string name="delete">删除</string>
    <string name="delete_comment_reminder">您确定要删除这条评论吗？</string>
    <string name="delete_error">删除失败</string>
    <string name="delete_note">删除文章</string>
    <string name="delete_note_book">删除文集</string>
    <string name="delete_note_book_tips">若删除%1$s，此文集内的文章也会一并删除，此操作不可逆转。</string>
    <string name="delete_note_tips">文章%1$s删除后将无法恢复。</string>
    <string name="delete_success">删除成功</string>
    <string name="deng_lu">登录</string>
    <string name="deng_lu_he_zhu_ce">登录 / 注册</string>
    <string name="dericly_entry">随便看看</string>
    <string name="discover_version">检测更新</string>
    <string name="display_mode">显示模式</string>
    <string name="dont_open">不用打开</string>
    <string name="dou_ban">豆瓣</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="download_apk_reminder">您连接的不是WIFI网络哟，确定继续下载么？</string>
    <string name="download_editor">下载编辑器</string>
    <string name="dui_hua">对话</string>
    <string name="early">更早</string>
    <string name="edit">编辑</string>
    <string name="edit_account_info">编辑个人资料</string>
    <string name="edit_collection">编辑专题</string>
    <string name="edit_collection_image_tip">点击更换专题图片</string>
    <string name="edit_collection_success">更新专题成功</string>
    <string name="edit_list">编辑列表</string>
    <string name="edit_note_tips">按住标题左侧的图标上下拖动可调整文章顺序</string>
    <string name="edit_user_profile">编辑个人简介</string>
    <string name="editor_not_install_auto_switch_to_editor">编辑器没有安装，点击后自动跳转安装页面</string>
    <string name="editor_not_installed">编辑器没安装</string>
    <string name="eidt_note">编辑文集</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="email_or_mobile_phone">邮箱或手机号</string>
    <string name="empty_title_content_delete">标题内容已经为空，继续执行将删除文章，并且无法回复，确定删除？</string>
    <string name="enable_rewarding_tips">已启用,打赏按钮会出现在您的文章底部</string>
    <string name="end_time">结束时间</string>
    <string name="enter_jian_shu">进入简书</string>
    <string name="entry_ignore">直接进入</string>
    <string name="exit_preview">退出预览</string>
    <string name="fa_biao">发表</string>
    <string name="fa_bu">发布</string>
    <string name="fa_bu_fen_xiang">发布分享</string>
    <string name="fa_song">发送</string>
    <string name="fa_song_cheng_gon">发送成功</string>
    <string name="generate_picture_and_share">生成图片分享</string>
    <string name="geng_dou">更多</string>
    <string name="hui_fu">回复</string>
    <string name="js_will_take_5_percent_when_charge">提现时简书将抽取5%的手续费</string>
    <string name="ju_bao">举报</string>
    <string name="money_colon">金额:</string>
    <string name="open_in_browser">浏览器打开</string>
    <string name="pay_with_alipay">使用支付宝支付，</string>
    <string name="please_input_charge_amount">请输入充值金额</string>
    <string name="please_input_default_reward_amount">请输入默认打赏金额</string>
    <string name="qu_xiao">取消</string>
    <string name="que_ding">确定</string>
    <string name="save_to_prviate_note">保存为私密文章</string>
    <string name="set_editor_notebook">文集设置</string>
    <string name="shan_chu">删除</string>
    <string name="syntax_refer">语法参考</string>
    <string name="update_to_private_note">更新私密文章</string>
    <string name="douban">豆瓣</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="emoji_backspace">Backspace</string>
    <string name="emoji_cars">Cars</string>
    <string name="emoji_electronics">Electronics</string>
    <string name="emoji_food">Food</string>
    <string name="emoji_nature">Nature</string>
    <string name="emoji_people">People</string>
    <string name="emoji_recent">Recent Emojis</string>
    <string name="emoji_sport">Sport</string>
    <string name="emoji_symbols">Symbols</string>
</resources>