<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/zw_icon_markdown"
        android:id="@id/menu_syntax_refer"
        android:title="@string/syntax_refer"/>
    <item
        android:icon="@drawable/zw_icon_delete"
        android:id="@id/menu_delete"
        android:title="@string/shan_chu"/>
    <item
        android:icon="@drawable/zw_icon_secret"
        android:id="@id/menu_update_private_note"
        android:title="@string/update_to_private_note"/>
    <item
        android:icon="@drawable/zw_icon_secret"
        android:id="@id/menu_save_as_private_note"
        android:title="@string/save_to_prviate_note"/>
    <item
        android:icon="@drawable/zw_icon_notebook"
        android:id="@id/menu_select_notebook"
        android:title="@string/set_editor_notebook"/>
</menu>