<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:orientation="horizontal" android:paddingTop="20.0dip" style="@style/dimen_mw">
        <TableRow>
            <TextView android:layout_gravity="center" android:id="@id/text_wechat" android:text="@string/wechat" android:drawableTop="@drawable/icon_share_wechat" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_wechat_moments" android:text="@string/wechatmoments" android:drawableTop="@drawable/icon_share_wechat_moment" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_sina_weibo" android:text="@string/sinaweibo" android:drawableTop="@drawable/icon_share_sina" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_qzone" android:text="@string/qzone" android:drawableTop="@drawable/icon_share_qzone" style="@style/share_item" />
        </TableRow>
        <TableRow android:layout_marginTop="10.0dip">
            <TextView android:layout_gravity="center" android:id="@id/text_qq" android:text="@string/qq" android:drawableTop="@drawable/icon_share_tencent_qq" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_dou_ban" android:text="@string/douban" android:drawableTop="@drawable/icon_share_douban" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_more" android:text="@string/geng_dou" android:drawableTop="@drawable/icon_share_more" style="@style/share_item" />
            <TextView android:layout_gravity="center" android:id="@id/text_sinaweibo_long" android:visibility="invisible" android:clickable="false" android:text="@string/chang_weibo" android:drawableTop="@drawable/share_icon_fill" style="@style/share_item" />
        </TableRow>
    </TableLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/theme_color" android:ellipsize="end" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/text_copy_uri" android:background="@drawable/selector_shap_oval_h40_frame_theme_gray" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/copy_collection_url" android:singleLine="true" android:onClick="onMyClick" />
</LinearLayout>