<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?shape_rect_ff_3a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="?color_2f_b1" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/charge" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="?shape_rect_fc_2f" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="18.0dip" android:layout_marginTop="21.0dip" android:layout_marginRight="18.0dip">
        <TextView android:textSize="14.0sp" android:textColor="?color_2f_b1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/money_colon" />
        <EditText android:textSize="14.0sp" android:textColor="#fff69a48" android:gravity="center_vertical" android:id="@id/input_money" android:background="@null" android:paddingLeft="10.0dip" android:paddingRight="13.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/please_input_charge_amount" android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <TextView android:textSize="12.0sp" android:textColor="?color_b1_71" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/js_will_take_5_percent_when_charge" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <TextView android:textSize="12.0sp" android:textColor="?color_2f_b1" android:id="@id/tv_pay_usage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pay_with_alipay" />
        <TextView android:textSize="12.0sp" android:textColor="#ff3e94c7" android:id="@id/tv_change" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change" />
    </LinearLayout>
    <View android:background="?listview_divider" android:layout_width="fill_parent" android:layout_height="0.39999998dip" android:layout_marginTop="19.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_color" android:gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/qu_xiao" android:layout_weight="1.0" />
        <View android:background="?listview_divider" android:layout_width="0.39999998dip" android:layout_height="fill_parent" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_color" android:gravity="center" android:id="@id/tv_confirm_charge" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/confirm_charge" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>