<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?common_bg_white_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="?text_color_1" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/change_default_reward_amount" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="?shape_rect_bg_f3_2f" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="32.0dip" android:layout_marginRight="16.0dip">
        <TextView android:textSize="14.0sp" android:textColor="?color_2f_b1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/money_colon" />
        <EditText android:textSize="14.0sp" android:textColor="#fff69a48" android:gravity="center_vertical" android:id="@id/input_money" android:background="@null" android:paddingLeft="10.0dip" android:paddingRight="13.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/please_input_default_reward_amount" android:inputType="numberDecimal" />
    </LinearLayout>
    <View android:background="?listview_divider" android:layout_width="fill_parent" android:layout_height="0.39999998dip" android:layout_marginTop="24.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="?text_color_1" android:gravity="center" android:id="@id/tv_cancel" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/qu_xiao" android:layout_weight="1.0" />
        <View android:background="?listview_divider" android:layout_width="0.39999998dip" android:layout_height="fill_parent" />
        <TextView android:textSize="16.0sp" android:textColor="?text_color_1" android:gravity="center" android:id="@id/tv_confirm" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/que_ding" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>